# Simple_webserver_in_C

./: .gitignore  CMakeLists.txt  IMPLEMENTATION_SUMMARY.md  Interview.md  README.md
.github/workflows/: main.yml  misra_ci.yml
include/: http_parser.h  http_server.h  logger.h  router.h
src/: logger.c  main.c
